# 911

./: .gitignore
911/: app.json  package-lock.json  package.json  tailwind.config.js
911/app/: _layout.tsx  index.tsx
911/constants/: Api.ts
911/lib/: api.ts
911/store/: useReportStore.ts
server/: .env  API_IMPLEMENTATION.md  main.py  populate_incidents.py  populate_responders.py  pyproject.toml  requirements.txt
server/app/ai/: analytics.py  client.py
server/app/api/: api.py
server/app/api/endpoints/: analytics.py  incidents.py  responders.py
server/app/core/: config.py  database.py
server/app/models/: enums.py  models.py
server/app/schemas/: incident.py  responder.py
server/app/utils/: distance.py
server/scripts/migrate/: responders.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: DispatchModal.tsx  DispatchPanel.tsx  IncidentDetails.tsx  IncidentFeed.tsx  IncidentMap.tsx  RespondersMap.tsx  SeverityBadge.tsx  Sidebar.tsx
ui/src/hooks/: useResponders.ts
ui/src/lib/: api.ts
