[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "faster-whisper>=1.2.1",
    "groq>=1.0.0",
    "numpy>=2.4.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
    "sqlalchemy>=2.0.25",
    "uvicorn>=0.27.0",
]
